# bird-photo-processor

./: .gitignore  AGENTS.md  README.md  SPEC.md  build.sh  demo_group.sh  demo_organize.sh  demo_scan.sh  pyproject.toml  run.sh  run_demos.sh
src/: __init__.py  cli.py
src/api/: ebird.py  inaturalist.py
src/gui/: __init__.py  main.py  model.py
src/processor/: dedup.py  engine.py  organizer.py  quality.py  quality_advanced.py  recognizer.py
src/scanner/: directory.py
src/utils/: config.py  models.py
tests/: test_dedup.py  test_scanner.py
